Make the body overflow IPython 2.x specific. Still it does not scroll in slide change but it does for IPython master, so for now, I will not invest more time to fix it, because soon IPython 3.0 will be released and I plan to migrate people to use 3.0 with RISE.

--- a/livereveal/main.css
+++ b/livereveal/main.css
@@ -104,9 +104,4 @@ div.output_subarea {
 html {
   overflow-y: auto;
 }
-/* 2.x compat */
-body.notebook_app {
-  overflow-y: auto;
-  overflow-x: hidden;
-}
 
